--- a/index.html
+++ b/index.html
@@ -65,3 +65,5 @@
         <h2>Estilo Pessoais do Hip Hop</h2>
         <iframe src="https://www.youtube.com/embed/gsuFgc6iI04" title="Identidade e Empoderamento no Hip-Hop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>O hip-hop também aborda questões de identidade, orgulho racial, autoexpressão e empoderamento, muitas vezes oferecendo uma voz para aqueles que são silenciados pela sociedade.</p>
+    </div>
+        
