--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             font-size: 14px;
+            text-align: center; /* Centraliza o conteúdo */
         }
         .box {
             border: 2px solid #000;
@@ -15,6 +16,7 @@
             width: 80%;
             margin: 20px auto;
             border-radius: 8px;
+            display: block;
         }
         .box1 {
             background-color: #ff0000; /* Vermelho */
@@ -24,46 +26,13 @@
         }
         .box3 {
             background-color: #ffd700; /* Amarelo */
-        }
-        .box4 {
-            background-color: #000000; /* Preto */
-            color: #ffffff; /* Texto branco para contraste */
-        }
-        img, iframe {
-            display: block;
-            margin: 10px auto;
-            max-width: 100%; /* Limita o tamanho da imagem ou vídeo ao tamanho do box */
-            height: auto;
-        }
-        iframe {
-            height: 315px;
-        }
-    </style>
-</head>
-<body>
-    <h1>Cultura do Hip-Hop</h1>
-
-    <div class="box box1">
-        <h2>Origem</h2>
-        <iframe src="https://www.youtube.com/embed/V9NVofH3KZs" title="Origem do Hip-Hop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>O hip-hop é um movimento cultural que surgiu nas periferias de Nova York na década de 1970, com quatro pilares principais: o rap, o DJing, o breakdance e o graffiti.O fundador do hip hop teria sido Clive Campbell, ou DJ Kool Herc. O primeiro evento da história do hip hop ocorreu no dia 11 de Agosto de 1973, na festa de aniversário da irmã do Dj, Cindy Campbell, no número 1520 da Sedgwick Avenue, no Bronx em Nova York.
-        </p>
+            margin-bottom: 20px; /* Espaço extra entre box3 e box4 */
     </div>
-
-    <div class="box box2">
-        <h2>Temas Sociais</h2>
-        <iframe src="https://www.youtube.com/embed/q_o6NXNyn68" title="Temas Sociais no Hip-Hop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Entre os temas recorrentes nas letras de rap, destacam-se a luta contra a opressão, as dificuldades vividas nas comunidades marginalizadas, o racismo, a desigualdade social e a violência urbana.O hip-hop é o caminho para as classes populares e a juventude das periferias gritarem suas raivas e suas revoltas. É importante analisar o hip-hop e sua cultura através de uma perspectiva social, uma vez que este acompanha desde seu inicio um grande número de lutas populares em todo o mundo. Vamos descobrir juntos o som da revolução...</p>
-    </div>
-
-    <div class="box box3">
-        <h2>Identidade e Empoderamento</h2>
-        <iframe src="https://www.youtube.com/embed/gsuFgc6iI04" title="Identidade e Empoderamento no Hip-Hop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>O hip-hop também aborda questões de identidade, orgulho racial, autoexpressão e empoderamento, muitas vezes oferecendo uma voz para aqueles que são silenciados pela sociedade.</p>
 
     <div class="box box4">
-        <h2>Estilo Pessoais do Hip Hop</h2>
-        <iframe src="https://www.youtube.com/embed/gsuFgc6iI04" title="Identidade e Empoderamento no Hip-Hop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>O hip-hop também aborda questões de identidade, orgulho racial, autoexpressão e empoderamento, muitas vezes oferecendo uma voz para aqueles que são silenciados pela sociedade.</p>
+        <h2>Estilos Pessoais do Hip Hop</h2>
+        <iframe src="https://www.youtube.com/embed/gsuFgc6iI04" title="Estilos Pessoais do Hip-Hop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>O hip-hop também aborda questões de estilo pessoal, moda, atitude e cultura de rua, expressando individualidade e criatividade.</p>
     </div>
-        
+</body>
+</html>
