--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             font-size: 14px;
+            text-align: center; /* Centraliza todo o conteúdo */
         }
         .box {
             border: 2px solid #000;
@@ -15,6 +16,7 @@
             width: 80%;
             margin: 20px auto;
             border-radius: 8px;
+            box-sizing: border-box; /* Garante que padding não altere a largura */
         }
         .box1 {
             background-color: #ff0000; /* Vermelho */
@@ -29,6 +31,9 @@
             background-color: #000000; /* Preto */
             color: #ffffff; /* Texto branco para contraste */
         }
+        .box4 iframe {
+            background-color: #000000; /* Garante que o fundo do vídeo também seja preto */
+        }
         img, iframe {
             display: block;
             margin: 10px auto;
@@ -37,6 +42,7 @@
         }
         iframe {
             height: 315px;
+            border: none; /* Remove a borda padrão do iframe */
         }
     </style>
 </head>
@@ -45,20 +51,29 @@
 
     <div class="box box1">
         <h2>Origem</h2>
-        <iframe src="https://www.youtube.com/embed/V9NVofH3KZs" title="Origem do Hip-Hop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>O hip-hop é um movimento cultural que surgiu nas periferias de Nova York na década de 1970, com quatro pilares principais: o rap, o DJing, o breakdance e o graffiti.O fundador do hip hop teria sido Clive Campbell, ou DJ Kool Herc. O primeiro evento da história do hip hop ocorreu no dia 11 de Agosto de 1973, na festa de aniversário da irmã do Dj, Cindy Campbell, no número 1520 da Sedgwick Avenue, no Bronx em Nova York.
-        </p>
+        <iframe src="https://www.youtube.com/embed/V9NVofH3KZs" title="Origem do Hip-Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>O hip-hop é um movimento cultural que surgiu nas periferias de Nova York na década de 1970, com quatro pilares principais: o rap, o DJing, o breakdance e o graffiti. O fundador do hip hop teria sido Clive Campbell, ou DJ Kool Herc. O primeiro evento da história do hip hop ocorreu no dia 11 de Agosto de 1973, na festa de aniversário da irmã do Dj, Cindy Campbell, no número 1520 da Sedgwick Avenue, no Bronx em Nova York.</p>
     </div>
 
     <div class="box box2">
         <h2>Temas Sociais</h2>
-        <iframe src="https://www.youtube.com/embed/q_o6NXNyn68" title="Temas Sociais no Hip-Hop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>Entre os temas recorrentes nas letras de rap, destacam-se a luta contra a opressão, as dificuldades vividas nas comunidades marginalizadas, o racismo, a desigualdade social e a violência urbana.O hip-hop é o caminho para as classes populares e a juventude das periferias gritarem suas raivas e suas revoltas. É importante analisar o hip-hop e sua cultura através de uma perspectiva social, uma vez que este acompanha desde seu inicio um grande número de lutas populares em todo o mundo. Vamos descobrir juntos o som da revolução...</p>
+        <iframe src="https://www.youtube.com/embed/q_o6NXNyn68" title="Temas Sociais no Hip-Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Entre os temas recorrentes nas letras de rap, destacam-se a luta contra a opressão, as dificuldades vividas nas comunidades marginalizadas, o racismo, a desigualdade social e a violência urbana. O hip-hop é o caminho para as classes populares e a juventude das periferias gritarem suas raivas e suas revoltas. É importante analisar o hip-hop e sua cultura através de uma perspectiva social, uma vez que este acompanha desde seu inicio um grande número de lutas populares em todo o mundo. Vamos descobrir juntos o som da revolução...</p>
     </div>
 
     <div class="box box3">
         <h2>Identidade e Empoderamento</h2>
-        <iframe src="https://www.youtube.com/embed/gsuFgc6iI04" title="Identidade e Empoderamento no Hip-Hop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/gsuFgc6iI04" title="Identidade e Empoderamento no Hip-Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>O hip-hop também aborda questões de identidade, orgulho racial, autoexpressão e empoderamento, muitas vezes oferecendo uma voz para aqueles que são silenciados pela sociedade.</p>
-       
+    </div>
+
+    <div class="box box4">
+        <h2>Estilo Pessoais do Hip Hop</h2>
+        <iframe src="https://www.youtube.com/embed/gsuFgc6iI04" title="Identidade e Empoderamento no Hip-Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>O hip-hop também aborda questões de identidade, orgulho racial, autoexpressão e empoderamento, muitas vezes oferecendo uma voz para aqueles que são silenciados pela sociedade.</p>
+    </div>
+
+</body>
+</html>
+
 
