--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="box box1">
         <h2>Origem</h2>
         <iframe src="https://www.youtube.com/embed/V9NVofH3KZs" title="Origem do Hip-Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>O hip-hop é um movimento cultural que surgiu nas periferias de Nova York na década de 1970, com quatro pilares principais: o rap, o DJing, o breakdance e o graffiti. O fundador do hip hop teria sido Clive Campbell, ou DJ Kool Herc. O primeiro evento da história do hip hop ocorreu no dia 11 de Agosto de 1973, na festa de aniversário da irmã do Dj, Cindy Campbell, no número 1520 da Sedgwick Avenue, no Bronx em Nova York.</p>
+        <p><br>O hip-hop é um movimento cultural que surgiu nas periferias de Nova York na década de 1970, com quatro pilares principais: o rap, o DJing, o breakdance e o graffiti. O fundador do hip hop teria sido Clive Campbell, ou DJ Kool Herc. O primeiro evento da história do hip hop ocorreu no dia 11 de Agosto de 1973, na festa de aniversário da irmã do Dj, Cindy Campbell, no número 1520 da Sedgwick Avenue, no Bronx em Nova York.</p>
     </div>
 
     <div class="box box2">
