--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="box box4">
         <h2>Estilo Pessoais do Hip Hop</h2>
-        <iframe src="https://youtu.be/8SNrY2WaEm0?si=G2sLjVEt9httRbQL" title="Estilos Pessoais do Hip Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/watch?v=8SNrY2WaEm0" title="Estilos Pessoais do Hip Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>O hip-hop também aborda questões de identidade, orgulho racial, autoexpressão e empoderamento, muitas vezes oferecendo uma voz para aqueles que são silenciados pela sociedade.</p>
     </div>
 
