--- a/index.html
+++ b/index.html
@@ -67,11 +67,9 @@
     </div>
 
     <div class="box box4">
-        <h2>Estilo Pessoais do Hip Hop</h2>
-        <iframe src="https://www.youtube.com/watch?v=q9eFxzbUw7I" title="Estilos Pessoais do Hip Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>O hip-hop também aborda questões de identidade, orgulho racial, autoexpressão e empoderamento, muitas vezes oferecendo uma voz para aqueles que são silenciados pela sociedade.</p>
-    </div>
-
+    <h2>Estilos Pessoais do Hip Hop</h2>
+    <iframe src="https://www.youtube.com/embed/8SNrY2WaEm0" title="Estilos Pessoais do Hip Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div>
 </body>
 </html>
 
