--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
             background-color: #000000; /* Preto */
             color: #ffffff; /* Texto branco para contraste */
         }
-        .box4 iframe {
+        .box5 {
+            background-color: #1E90FF; /* Azul */
+            color: #ffffff; /* Texto branco para contraste */
+        }
+        .box4 iframe, .box5 iframe {
             background-color: #000000; /* Garante que o fundo do vídeo também seja preto */
         }
         img, iframe {
@@ -54,7 +58,8 @@
         <iframe src="https://www.youtube.com/embed/V9NVofH3KZs" title="Origem do Hip-Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>O hip-hop é um movimento cultural que surgiu nas periferias de Nova York na década de 1970, com quatro pilares principais: o rap, o DJing, o breakdance e o graffiti. O fundador do hip hop teria sido Clive Campbell, ou DJ Kool Herc. O primeiro evento da história do hip hop ocorreu no dia 11 de Agosto de 1973, na festa de aniversário da irmã do Dj, Cindy Campbell, no número 1520 da Sedgwick Avenue, no Bronx em Nova York.O momento fundador dessa cultura é quando os quatro elementos foram reunidos em uma única festa no Bronx, em 1973, organizada pelo DJ Kool Herc junto com sua irmã, Cindy Campbell. Lima esteve, neste ano, no mesmo local onde essa primeira festa foi organizada, em uma celebração de 50 anos de existência do hip hop.</p>
     </div>
-        <div class="box box2">
+
+    <div class="box box2">
         <h2>Temas Sociais</h2>
         <iframe src="https://www.youtube.com/embed/q_o6NXNyn68" title="Temas Sociais no Hip-Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>Entre os temas recorrentes nas letras de rap, destacam-se a luta contra a opressão, as dificuldades vividas nas comunidades marginalizadas, o racismo, a desigualdade social e a violência urbana. O hip-hop é o caminho para as classes populares e a juventude das periferias gritarem suas raivas e suas revoltas. É importante analisar o hip-hop e sua cultura através de uma perspectiva social, uma vez que este acompanha desde seu inicio um grande número de lutas populares em todo o mundo. Vamos descobrir juntos o som da revolução...</p>
@@ -66,11 +71,13 @@
         <p>O hip-hop também aborda questões de identidade, orgulho racial, autoexpressão e empoderamento, muitas vezes oferecendo uma voz para aqueles que são silenciados pela sociedade.</p>
     </div>
 
-    <div class="box box4">
-    <h2>Estilos Pessoais do Hip Hop</h2>
-    <iframe src="https://www.youtube.com/embed/8SNrY2WaEm0" title="Estilos Pessoais do Hip Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <div class="box box5">
+        <h2>Novos Horizontes do Hip-Hop</h2>
+        <iframe src="https://www.youtube.com/embed/8SNrY2WaEm0" title="Novos Horizontes do Hip-Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>O hip-hop continua a evoluir, expandindo suas fronteiras e influenciando outras culturas ao redor do mundo. Este vídeo explora os novos horizontes desse movimento cultural.</p>
+    </div>
 </body>
 </html>
+
 
 
