--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     </div>
 
     <div class="box box4">
-        <h2>Novos Horizontes do Hip-Hop</h2>
+        <h2>Estilos Pessoais do Hip Hop</h2>
         <iframe src="https://www.youtube.com/embed/8SNrY2WaEm0" title="Novos Horizontes do Hip-Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>O hip-hop continua a evoluir, expandindo suas fronteiras e influenciando outras culturas ao redor do mundo. Este vídeo explora os novos horizontes desse movimento cultural.</p>
+        <p>A dança hip hop inclui uma grande variedade de estilos, nomeadamente breaking, locking, popping, e krumping. Breaking, locking e popping foram desenvolvidos na década de 1970 por negros e latino-americanos. O krumping surgiu na década de 1990, em comunidades Afro-americanas, em Los Angeles.</p>
     </div>
 </body>
 </html>
