--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@
     <div class="box box4">
         <h2>Estilos Pessoais do Hip Hop</h2>
         <iframe src="https://www.youtube.com/embed/8SNrY2WaEm0" title="Novos Horizontes do Hip-Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p>A dança hip hop inclui uma grande variedade de estilos, nomeadamente breaking, locking, popping, e krumping. Breaking, locking e popping foram desenvolvidos na década de 1970 por negros e latino-americanos. O krumping surgiu na década de 1990, em comunidades Afro-americanas, em Los Angeles.</p>
+        <p>A dança hip hop inclui uma grande variedade de estilos, nomeadamente breaking, locking, popping, e krumping. Breaking, locking e popping foram desenvolvidos na década de 1970 por negros e latino-americanos. O krumping surgiu na década de 1990, em comunidades Afro-americanas, em Los Angeles.O Hip Hop é considerado um movimento artístico de contestação social que forma um sistema simbólico
+orientador das práticas culturais e das atitudes juvenis possibilitando a cidadania e o reconhecimento social. Esta
+pesquisa teve por objetivo descrever e analisar a utilização do Hip Hop como estratégia para a construção da
+identidade, conscientização, participação e inclusão social de jovens inseridos no cotidiano de comunidades periféricas
+na perspectiva dos direitos culturais. O estudo consistiu num estudo de caso, de abordagem qualitativa. A coleta de
+dados ocorreu durante um ano a partir de 10 entrevistas semiestruturadas e filmagem de oficinas artístico-culturais no
+contexto terapêutico ocupacional, atuando na interface entre o campo social, o campo cultural e o campo da educação
+não formal.</p>
     </div>
 </body>
 </html>
