--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
 orientador das práticas culturais e das atitudes juvenis possibilitando a cidadania e o reconhecimento social. Esta
 pesquisa teve por objetivo descrever e analisar a utilização do Hip Hop como estratégia para a construção da
 identidade, conscientização, participação e inclusão social de jovens inseridos no cotidiano de comunidades periféricas
-na perspectiva dos direitos culturais. O estudo consistiu num estudo de caso, de abordagem qualitativa. A coleta de
-dados ocorreu durante um ano a partir de 10 entrevistas semiestruturadas e filmagem de oficinas artístico-culturais no
-contexto terapêutico ocupacional, atuando na interface entre o campo social, o campo cultural e o campo da educação
-não formal.</p>
+na perspectiva dos direitos culturais.</p>
     </div>
 </body>
 </html>
