--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         }
         .box4 {
             background-color: #000000; /* Preto */
-            color: #ffffff; /* Texto branco para contraste */
+            color:  #FFFFFF; /* Texto branco para contraste */
         }
         .box5 {
             background-color: #1E90FF; /* Azul */
-            color: #ffffff; /* Texto branco para contraste */
+            color:  #FFFFFF; /* Texto branco para contraste */
         }
         .box4 iframe, .box5 iframe {
             background-color: #000000; /* Garante que o fundo do vídeo também seja preto */
