--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
         }
         .box1 {
             background-color: #ff0000; /* Vermelho */
+            color:   #FFFFFF; /*Texto branco para contraste*/
         }
         .box2 {
             background-color: #008000; /* Verde */
+            color:   #FFFFFF; /*Texto branco para contrate*/
         }
         .box3 {
             background-color: #ffd700; /* Amarelo */
+            color:   #FFFFFF; /* Texto branco para contraste*/
         }
         .box4 {
             background-color: #000000; /* Preto */
