--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
         .box3 {
             background-color: #ffd700; /* Amarelo */
-            color:   #FFFFFF; /* Texto preto para contraste*/
+            color:   #000000; /* Texto preto para contraste*/
         }
         .box4 {
             background-color: #000000; /* Preto */
