--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@ na perspectiva dos direitos culturais.</p>
         <iframe src="https://www.youtube.com/embed/8SNrY2WaEm0" title="Novos Horizontes do Hip-Hop" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>A dança hip hop inclui uma grande variedade de estilos, nomeadamente breaking, locking, popping, e krumping. Breaking, locking e popping foram desenvolvidos na década de 1970 por negros e latino-americanos. O krumping surgiu na década de 1990, em comunidades Afro-americanas, em Los Angeles.</p>
     </div>
+    
+<div class="box box5">
+    <h2>Grupos 1, 2°C</h2>
+    <p>Samuel Fernando, João Victor Saraiva,Pedro Pantaroto, Isaac Sagres, Danilo Felipe.</p>
+</div>
 </body>
 </html>
 
