--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
         .box5 {
             background-color: #1E90FF; /* Azul */
-            color:  #FFFFFF; /* Texto branco para contraste */
+            color: #000000; /* Texto preto para contraste */
         }
         .box4 iframe, .box5 iframe {
             background-color: #000000; /* Garante que o fundo do vídeo também seja preto */
