--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@ na perspectiva dos direitos culturais.</p>
     
 <div class="box box5">
     <h2>Grupos 1, 2°C</h2>
-    <p>*Samuel Fernando, João Victor Saraiva
-     *Pedro Pantaroto, Isaac Sagres,
-     *Danilo Felipe.</p>
+    <p>°Samuel Fernando, João Victor Saraiva
+     <p>°Pedro Pantaroto, Isaac Sagres,
+     <p>°Danilo Felipe.</p>
 </div>
 </body>
 </html>
