--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ na perspectiva dos direitos culturais.</p>
     </div>
     
 <div class="box box5">
-    <h2>Grupos 1, 2°C</h2>
+    <h2>Grupos 1------2°C</h2>
     <p>°Samuel Fernando, João Victor Saraiva
      <p>°Pedro Pantaroto, Isaac Sagres,
      <p>°Danilo Felipe.</p>
