--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@ na perspectiva dos direitos culturais.</p>
     
 <div class="box box5">
     <h2>Grupos 1------2°C</h2>
-    <p>°Samuel Fernando, João Victor Saraiva
-     <p>°Pedro Pantaroto, Isaac Sagres,
+    <p>°Samuel Fernando 
+      <p>°João Victor Saraiva
+     <p>°Pedro Pantaroto 
+      <p>Isaac Sagres
      <p>°Danilo Felipe.</p>
 </div>
 </body>
