--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ na perspectiva dos direitos culturais.</p>
     <p>°Samuel Fernando 
       <p>°João Victor Saraiva
      <p>°Pedro Pantaroto 
-      <p>Isaac Sagres
+      <p>°Isaac Sagres
      <p>°Danilo Felipe.</p>
 </div>
 </body>
